Bug 78021, Copy Link Address context menu does not work for image maps (<area> elements), <link> elements or simple XLinks. r=harishd, sr=vidur.